hotfix for fanfox layout change
- hotfixed content script placeholder detection for fanfox
- hotfixed background script chapters list retrieval for fanfox
- replaced content script navigation bar eventlistener on button by links (you can see where you go before clicking!)
- fixed extension name and title

--- a/content_tasks/content.css
+++ b/content_tasks/content.css
@@ -29,3 +29,12 @@
     border-radius: 7px;
     color: #EEEEEE;
 }
+
+a {
+    text-decoration: none;
+    color: #EEEEEE;
+}
+
+a:hover {
+    color: #FAB400;
+}
