MangasSubscriber version 2 ready
- all new interface :
-- no more list duplicaate between popup and options page ! every management possibility for a manga is accessible directly from the popup list
-- non need to click several times to access the mangas list ! it's available directly after clicking the popup
-- changed text buttons to icons, and remade all icons
-- options and help now open directly in the popup
-- it is now possible to apply certain actions to several mangas at once !

- new functionnalities :
-- tags ! you can now define and add tags to your mangas to more easily filter them
-- search ! you can now search for something over all supported websites
-- follow individual mangas on different websites ! you can register several website for each manga on which to check for updates
-- import/export online ! (requires firefox sync) if you're signed in on firefox and have activated firefox synchronization, you can save your list online to easily access it from different computers with a click of a button

- optimizations :
-- faster loading of the popup !
-- faster updates !
-- faster everything !

--- a/content_tasks/content.css
+++ b/content_tasks/content.css
@@ -1,10 +1,15 @@
+.navigation_bar_spacer {
+    padding-top: 42px;
+}
+
 #mangassubscriber_nav_bar{
     position: fixed;
     top: 0px;
     left: 0px;
     width: 100%;
-    background: black;
-	z-index: 10;
+    background-color: black;
+    z-index: 1000;
+    border-bottom: 1px solid gray;
 }
 
 .left_nav_button{
