--- a/content_tasks/content.css
+++ b/content_tasks/content.css
@@ -22,7 +22,7 @@
     float:right;
 }
 
-.button {
+#mangassubscriber_nav_bar .button {
 	padding: 4px;
 	cursor: pointer;
 	
@@ -35,11 +35,18 @@
     color: #EEEEEE;
 }
 
-a {
+#mangassubscriber_nav_bar .button a {
     text-decoration: none;
     color: #EEEEEE;
 }
 
-a:hover {
+#mangassubscriber_nav_bar .button a:hover {
     color: #FAB400;
+}
+
+.centered {
+    position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
