--- a/popup/popup.css
+++ b/popup/popup.css
@@ -161,7 +161,7 @@ CONSOLE PANEL
 	padding-left: 10px;
 	padding-right: 10px;
 	position: relative;
-	width: calc(100vw - 11rem - 10rem - 17px);
+	width: calc(100vw - 2px - 11rem - 10rem - 17px);
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -424,6 +424,7 @@ MODAL
 	border-radius: 0.5em;
 	width: 500px;
 	max-width: 500px;
+	max-height: 600px;
 }
 
 #modal_title {
@@ -432,6 +433,9 @@ MODAL
 	text-align: center;
 	text-decoration: bold;
 	padding: 18px 12px;
+	max-height: 3.5em;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 #modal_content {
